--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Daniel's Portfolio Site</title>
 </head>
 <body>
-    <h1>Daniel's Portfolio Site</h1>
+    <div>
+        <h1>Daniel's Portfolio Site</h1>
+    </div>
+
+    <h4>coming soon</h4>
     
 </body>
 </html>
