--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <div>
         <h1>Daniel's Portfolio Site</h1>
     </div>
-
     <h4>coming soon</h4>
+    <br>
+    <a href="./contact.html">Contact Info</a>
     
 </body>
 </html>
