--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <title>Contact</title>
 </head>
 <body>
-    
+    <p>email: danielmanning94@gmail.com</p>
+    <p>www.linkedin.com/in/danielnatividadmanning</p>
+    <p>https://www.behance.net/danielmanning2</p>
 </body>
 </html>
