--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <title>Contact</title>
 </head>
 <body>
-    <p>email: danielmanning94@gmail.com</p>
-    <p>www.linkedin.com/in/danielnatividadmanning</p>
-    <p>https://www.behance.net/danielmanning2</p>
+    <p>Email: danielmanning94@gmail.com</p>
+    <p>Linkedin: www.linkedin.com/in/danielnatividadmanning</p>
+    <p>Behance: https://www.behance.net/danielmanningdesign</p>
 </body>
 </html>
