Made initial aesthetic changes base on the new design.

--- a/wip.html
+++ b/wip.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- Icon library from Font Awesome -->
     <script src="https://kit.fontawesome.com/c4db305d90.js" crossorigin="anonymous"></script>
 
@@ -49,7 +49,7 @@
                         <h1>Hello, I'm a __________</h1>
                     </div>
                     <div class="flex-item" id="profile-pic">
-                        <img class="profile-pic" src="img/daniel-photo.png" alt="Daniel Manning's profile photo">
+                        <img class="profile-pic" src="img/profilepic.png" alt="Daniel Manning's profile photo">
                     </div>
 
                 </div>
