Created the Recent Work card placeholders as a DOM object. Will integrate DOM manipulation into the rest of the site soon to make it more modular.

--- a/wip.html
+++ b/wip.html
@@ -17,6 +17,7 @@
     <!-- Icon library from Font Awesome -->
     <script src="https://kit.fontawesome.com/c4db305d90.js" crossorigin="anonymous"></script>
 
+
     <title>Daniel Manning's Portfolio Site</title>
 </head>
 <body>
@@ -60,6 +61,13 @@
 
 
     <main>
+
+        <!-- Card Section -->
+        <section class="body-section" id="card-section">
+
+        </section>
+
+
         <!-- Timeline -->
         <section class="body-section" id="timeline">
             <div class="content-block">
@@ -130,6 +138,7 @@
                         <!-- TODO -->
                         <!-- Will contain both a black placeholder and the actual preview image -->
                         <!-- The actual preview image -->
+                        This is basic HTML
                     </div>
                     <div class="recent-work-info">
                         <div class="recent-work-title"></div>
@@ -145,6 +154,7 @@
                         <!-- TODO -->
                         <!-- Will contain both a black placeholder and the actual preview image -->
                         <!-- The actual preview image -->
+                        This is basic HTML
                     </div>
                     <div class="recent-work-info">
                         <div class="recent-work-title"></div>
@@ -160,6 +170,7 @@
                         <!-- TODO -->
                         <!-- Will contain both a black placeholder and the actual preview image -->
                         <!-- The actual preview image -->
+                        This is basic HTML
                     </div>
                     <div class="recent-work-info">
                         <div class="recent-work-title"></div>
@@ -169,8 +180,8 @@
                         <div class="recent-work-description"></div>
                     </div>
                 </div>
-                <div class="carousel-navigator"></div>
             </div>
+            <div class="carousel-navigator"></div>
         </section>
 
 
@@ -226,4 +237,8 @@
         </div>
     </footer>
 </body>
+
+
+    <!-- DOM Scripts for modular information -->
+    <script type="text/javascript" src="js\main.js"></script>
 </html>
