--- a/wip.html
+++ b/wip.html
@@ -12,7 +12,7 @@
     <!-- Fonts from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     <!-- Icon library from Font Awesome -->
     <script src="https://kit.fontawesome.com/c4db305d90.js" crossorigin="anonymous"></script>
@@ -138,7 +138,7 @@
                         <!-- TODO -->
                         <!-- Will contain both a black placeholder and the actual preview image -->
                         <!-- The actual preview image -->
-                        This is basic HTML
+                        This is raw HTML
                     </div>
                     <div class="recent-work-info">
                         <div class="recent-work-title"></div>
@@ -154,7 +154,7 @@
                         <!-- TODO -->
                         <!-- Will contain both a black placeholder and the actual preview image -->
                         <!-- The actual preview image -->
-                        This is basic HTML
+                        This is raw HTML
                     </div>
                     <div class="recent-work-info">
                         <div class="recent-work-title"></div>
@@ -170,7 +170,7 @@
                         <!-- TODO -->
                         <!-- Will contain both a black placeholder and the actual preview image -->
                         <!-- The actual preview image -->
-                        This is basic HTML
+                        This is raw HTML
                     </div>
                     <div class="recent-work-info">
                         <div class="recent-work-title"></div>
