Enabled Recent Work Cards to generate based on preset data. Fixed merge issues from the last merge. Made the resizing consistent between the title section and the Recent Work section. Added a shadow hover effect to the cards.

--- a/wip.html
+++ b/wip.html
@@ -27,7 +27,7 @@
                         <!-- Logo -->
                         <div class="flex-item" id="logo">
                             <a href="index.html">
-                                <h1><strong>Daniel Manning</strong></h1>
+                                <h2>Daniel Manning</h2>
                                 <p>UX/UI Designer</p>
                                 <p><i class="fa-solid fa-location-dot"></i> NJ, USA</p>
                             </a>
@@ -45,7 +45,7 @@
                 <div class="content-block">
                     <div class="flex-container" id="main-banner">
                         <div class="flex-item" id="slogan">
-                            <h1>Hello, I'm a <strong>Designer</strong></h1>
+                            <h1>Hello, I'm a <span>Designer</span></h1>
                         </div>
                         <div class="flex-item" id="profile-pic-container">
                             <img class="profile-pic" src="img/profilepic.png" alt="Daniel Manning's profile photo">
