Refined the navigation menu to adjust based on mobile vs desktop width

--- a/wip.html
+++ b/wip.html
@@ -32,15 +32,24 @@
                                 <p><i class="fa-solid fa-location-dot"></i> NJ, USA</p>
                             </a>
                         </div>
-                        <!-- Nav Bar -->
-                        <div class="menu flex-container">
+                        <!-- Horizontal Nav Bar -->
+                        <div class="menu top-nav flex-container">
                             <div class="flex-item"><a href="recent-work.html">Recent Work</a></div>
-                            <div class="flex-item"><a href="about.html">About</a></div>
+                            <div class="flex-item"><a href="about.html">Resume</a></div>
                             <div class="flex-item"><a href="#contact">Contact</a></div>
                         </div>
                     </div>
                 </nav>
+
+                <!-- Vertical Nav Bar -->
+                <div class="burgerX"></div>
+                <div class="menu side-nav">
+                    <div class="side-nav-item"><a href="recent-work.html">Recent Work</a></div>
+                    <div class="side-nav-item"><a href="about.html">Resume</a></div>
+                    <div class="side-nav-item"><a href="#contact">Contact</a></div>
+                </div>
                 
+
                 <!-- Descripter/Main Pic -->
                 <div class="content-block">
                     <div class="flex-container" id="main-banner">
