Fixed the colors based on the Figma design. Fixed the resizing in the overview and challenge sections of a project page. Completed the dynamic blue background for the challenge section.

--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@
     <body>
         <header>
             <!-- Title Block -->
-            <section class="light-section" id="title-section">
+            <section id="title-section">
                 <nav class="content-block" id="navbar">
                     <div class="flex-container">
                         <!-- Logo -->
