Moved over the html code to index so the site can be viewed on the web.

--- a/project.html
+++ b/project.html
@@ -30,7 +30,7 @@
                     <div class="flex-container">
                         <!-- Logo -->
                         <div class="logo flex-item" id="logo">
-                            <a href="./wip.html">
+                            <a href="./index.html">
                                 <h2>Daniel Manning</h2>
                                 <p>UX/UI Designer</p>
                                 <p><i class="fa-solid fa-location-dot"></i> NJ, USA</p>
@@ -38,7 +38,7 @@
                         </div>
                         <!-- Horizontal Nav Bar -->
                         <div class="menu top-nav flex-container">
-                            <input type="button" onclick="window.location.href='./wip.html#recent-work'" class="nav-item flex-item" value="Recent Work"/>
+                            <input type="button" onclick="window.location.href='./index.html#recent-work'" class="nav-item flex-item" value="Recent Work"/>
                             <a class="nav-item flex-item" href="#" onclick="window.open('./data/Daniel Manning Resume 2022.pdf', '_blank').focus()"; return false;>Resume</a>
                             <input type="button" onclick="document.getElementById('contact').scrollIntoView();" class="nav-item flex-item" value="Contact"/>
                         </div>
