Added the proper favicon. Yet another attempt at getting the box shadows to work on iPhone, by removing the native appearance.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <!-- Main Styles -->
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="icon" href="./img/profilepic.png">
+        <link rel="icon" href="./img/assets/favicon.ico">
 
         <!-- Icon library from Font Awesome -->
         <script src="https://kit.fontawesome.com/c4db305d90.js" crossorigin="anonymous"></script>
