Fixed the Recent Work Button from the project page. Attempted to override webkit and moz native appearances. Realized it already works fine for the side menu, but not for form tags like the recent work cards.

--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
                 <label for="burger-toggle" class="burgerX"><span></span></label>
                 <div class="side-menu-block">
                     <div class="menu side-nav">
-                        <input type="button" onClick="document.getElementById('recent-work').scrollIntoView();" class="nav-item side-nav-item" value="Recent Work"/>
+                        <input type="button" onClick="window.location.href='./index.html#recent-work'" class="nav-item side-nav-item" value="Recent Work"/>
                         <a class="nav-item flex-item" href="#" onclick="window.open('./data/Daniel Manning Resume 2022.pdf', '_blank').focus()"; return false;>Resume</a>
                         <input type="button" onClick="document.getElementById('contact').scrollIntoView();" class="nav-item side-nav-item" value="Contact"/>
                     </div>
