--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="side-menu-block">
                     <div class="menu side-nav">
                         <input type="button" onClick="document.getElementById('recent-work').scrollIntoView();" class="nav-item side-nav-item" value="Recent Work"/>
-                        <a class="nav-item flex-item" href="#" onclick="window.open('./data/Daniel Manning Resume 2022.pdf', '_blank').focus()"; return false;>Resume</a>
+                        <a class="nav-item flex-item side-nav-item" href="#" onclick="window.open('./data/Daniel Manning Resume 2022.pdf', '_blank').focus()"; return false;>Resume</a>
                         <input type="button" onClick="document.getElementById('contact').scrollIntoView();" class="nav-item side-nav-item" value="Contact"/>
                     </div>
                 </div>
